paid/force-app/main/default/objects/Paid_Payment_Allocation_Invoice__c/Paid_Payment_Allocation_Invoice__c.object-meta.xml
<CustomObject>
    <label>Paid Payment Allocation (Invoice)</label>
    <nameField>
        <label>Paid Payment Allocation (Invoice) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid Payment Allocation (Invoice)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>