paid/force-app/main/default/objects/Paid_Payment_Allocation_Invoice__c/fields/Paid_Allocation_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Allocation_Number__c</fullName>
    <displayFormat>PAI-{0000}</displayFormat>
    <label>Paid Allocation Number</label>
    <type>AutoNumber</type>
</CustomField>