paid/force-app/main/default/objects/Paid_Payment_Allocation_Invoice__c/fields/Paid_Impact_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Impact_Amount__c</fullName>
    <formula>Paid_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Impact Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>