paid/force-app/main/default/objects/Paid_Payment_Allocation_Invoice__c/fields/Paid_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice__c</fullName>
    <label>Paid_Invoice</label>
    <referenceTo>Paid_Invoice__c</referenceTo>
    <relationshipLabel>Paid Payment Allocation (Invoice)</relationshipLabel>
    <relationshipName>Paid_Payment_Allocation_Invoice</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>