paid/force-app/main/default/objects/Paid_Payment_Allocation_Invoice__c/fields/Paid_Payment__c.field-meta.xml
<CustomField>
    <fullName>Paid_Payment__c</fullName>
    <label>Paid_Payment</label>
    <referenceTo>Paid_Payment__c</referenceTo>
    <relationshipLabel>Paid Payment Allocation (Invoice)</relationshipLabel>
    <relationshipName>Paid_Payment_Allocation_Invoice</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>