paid/force-app/main/default/objects/Paid_Payment_Allocation_Invoice__c/fields/Paid_type__c.field-meta.xml
<CustomField>
    <fullName>Paid_type__c</fullName>
    <label>Paid type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allocation</fullName>
            </value>
            <value>
                <fullName>Unallocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>