paid/force-app/main/default/objects/Paid_Payment_Allocation_Invoice__c/fields/Paid_Unallocated__c.field-meta.xml
<CustomField>
    <fullName>Paid_Unallocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Unallocated?</label>
    <type>Checkbox</type>
</CustomField>